# motiongfx

./: .envrc  .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: rust.yml
assets/themes/: Monokai Pro.tmTheme
crates/bevy_motiongfx/: Cargo.toml  README.md
crates/bevy_motiongfx/src/: controller.rs  interpolation.rs  kanva.rs  lib.rs  manager.rs  pipeline.rs  registry.rs  velyst_integration.rs  world.rs
crates/bevy_motiongfx/tests/: logging.rs
crates/kurbo_motiongfx/: Cargo.toml
crates/kurbo_motiongfx/src/: interp.rs  interpolation.rs  lib.rs  trace.rs
crates/motiongfx/: Cargo.toml  README.md
crates/motiongfx/benches/: action_storage.rs
crates/motiongfx/docs/: world.rs
crates/motiongfx/examples/: custom_world.rs
crates/motiongfx/src/: accessor.rs  action.rs  ease.rs  field.rs  interpolation.rs  lib.rs  pipeline.rs  registry.rs  resources.rs  sequence.rs  subject.rs  time.rs  timeline.rs  track.rs  world.rs
crates/motiongfx/src/action/: id_registry.rs  table.rs
crates/motiongfx/src/pipeline/: func_pointers.rs
crates/motiongfx/src/track/: meta.rs
crates/motiongfx_bevy/: Cargo.toml
crates/motiongfx_common/: Cargo.toml
crates/motiongfx_common/src/: lib.rs
crates/motiongfx_common/src/motion/: standard_material_motion.rs  transform_motion.rs
crates/motiongfx_core/: Cargo.toml
crates/motiongfx_core/macros/: Cargo.toml
crates/motiongfx_core/macros/src/: lib.rs
crates/motiongfx_core/src/: action.rs  color_palette.rs  ease.rs  f32lerp.rs  lib.rs  sequence.rs  slide.rs
crates/motiongfx_core/src/f32lerp/: bevy_f32lerp.rs  vello_f32lerp.rs
crates/motiongfx_editor/: Cargo.toml
crates/motiongfx_editor/docs/: HANDOFF.md
crates/motiongfx_editor/src/: layout.rs  lib.rs  playback.rs  scene.rs  ui.rs  view.rs
crates/motiongfx_editor/src/ui/: dock.rs  glass.rs  glass.wgsl  inspector.rs  theme.rs
crates/motiongfx_editor/src/ui/dock/: add_popup.rs  area.rs  drag.rs  reconcile.rs  registry.rs  split.rs  tabs.rs  tree.rs
crates/motiongfx_editor/src/ui/glass/: backdrop.rs  glow.rs  material.rs  preset.rs  widget.rs
crates/motiongfx_engine/: Cargo.toml
crates/motiongfx_engine/src/: accessor.rs  action.rs  animate.rs  arena.rs  bake.rs  cleanup.rs  ease.rs  field.rs  interpolation.rs  lib.rs  pipeline.rs  player.rs  sample.rs  sequence.rs  slide.rs  timeline.rs  timeline_v2.rs  track.rs
crates/motiongfx_engine/src/interpolation/: bevy_interp.rs  math_interp.rs
crates/motiongfx_engine/src/sequence/: keyframe.rs  segment.rs  track.rs
crates/motiongfx_kurbo/: Cargo.toml
crates/motiongfx_kurbo/src/: interp.rs  interpolation.rs  lib.rs  trace.rs
crates/peniko_motiongfx/: Cargo.toml  README.md
crates/peniko_motiongfx/src/: interpolation.rs  lib.rs  trace.rs
crates/velyst_motiongfx/: Cargo.toml  README.md
crates/velyst_motiongfx/src/: lib.rs
editor/motiongfx_editor/: Cargo.toml
editor/motiongfx_editor/docs/: HANDOFF.md
editor/motiongfx_editor/src/: hierarchy.rs  layout.rs  lib.rs  main.rs  playback.rs  scene.rs  view.rs
editor/motiongfx_editor_ui/: Cargo.toml
editor/motiongfx_editor_ui/src/: dock.rs  glass.rs  inspector.rs  lib.rs  reactive.rs
editor/motiongfx_editor_ui/src/dock/: add_popup.rs  area.rs  drag.rs  reconcile.rs  registry.rs  split.rs  tabs.rs  tree.rs
editor/motiongfx_editor_ui/src/glass/: backdrop.rs  material.rs  preset.rs  widget.rs
editor/motiongfx_editor_ui_kernel/: Cargo.toml  README.md
editor/motiongfx_editor_ui_kernel/src/: host.rs  lib.rs  ui.rs
examples/: custom_ease.rs  custom_interp.rs  easings.rs  hello_world.rs  slide_basic.rs  typst_basic.rs
examples/bevy_examples/: Cargo.toml
examples/bevy_examples/assets/typst/: velyst_demo.typ
examples/bevy_examples/examples/: custom_ease.rs  custom_interp.rs  dock_demo.rs  easings.rs  editor.rs  hello_world.rs  minimal.rs  recording.rs  slide_basic.rs  velyst_demo.rs
examples/bevy_examples/src/: lib.rs
examples/bevy_motiongfx_examples/: Cargo.toml
examples/bevy_motiongfx_examples/examples/: easings.rs  hello_world.rs  slide_basic.rs
examples/vello_winit_example/: Cargo.toml
examples/vello_winit_example/examples/: lissajous.rs
examples/vello_winit_example/src/: lib.rs
src/: lib.rs
