[workspace]
resolver = "2"
members = ["crates/*", ]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/voxell-tech/motiongfx"
readme = "README.md"

[workspace.dependencies]
# motiongfx
motiongfx = { version = "0.1.0", path = "crates/motiongfx" }
bevy_motiongfx = { version = "0.1.0", path = "crates/bevy_motiongfx" }

# bevy
bevy_ecs = { version = "0.16", default-features = false }
bevy_app = { version = "0.16", default-features = false }
bevy_platform = { version = "0.16", default-features = false }
bevy_math = { version = "0.16", default-features = false, features = [ "libm" ] }
bevy_asset = { version = "0.16", default-features = false }
bevy_transform = { version = "0.16", default-features = false, features = ["bevy-support"] }
bevy_color = { version = "0.16", default-features = false }
bevy_sprite = { version = "0.16", default-features = false }
bevy_pbr = { version = "0.16", default-features = false }

# other
smallvec = "1"
nonempty = { version = "0.12.0", default-features = false }

[workspace.lints.clippy]
redundant_type_annotations = "warn"
bool_comparison = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
