[package]
name = "bevy_motiongfx"
description = "An implementation of the MotionGfx framework for Bevy."
exclude = ["/assets/", "/examples/"]
keywords = ["motion", "animation", "procedural", "bevy", "plugin"]
categories = ["no-std", "multimedia", "graphics", "visualization", "gui"]
readme = "./README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# motiongfx
motiongfx = { workspace = true }
peniko_motiongfx = { workspace = true, optional = true }

# bevy
bevy_ecs = { workspace = true }
bevy_app = { workspace = true }
bevy_platform = { workspace = true }
bevy_derive = { workspace = true }
bevy_math = { workspace = true }
bevy_time = { workspace = true }
bevy_asset = { workspace = true, optional = true }
bevy_transform = { workspace = true, optional = true }
bevy_color = { workspace = true, optional = true }

# other
velyst = { workspace = true, optional = true }

[dev-dependencies]
bevy = { workspace = true, features = ["bevy_pbr"] }

[lints]
workspace = true

[features]
default = ["std", "asset", "transform", "color"]
std = ["motiongfx/std", "bevy_ecs/std", "bevy_app/std", "bevy_platform/std", "bevy_time/std"]
asset = ["dep:bevy_asset"]
transform = ["dep:bevy_transform"]
color = ["dep:bevy_color"]
velyst = ["dep:velyst", "dep:peniko_motiongfx"]
