[package]
name = "motiongfx"
description = "Backend agnostic motion graphics creation framework."
exclude = ["/examples/"]
keywords = ["motion", "animation", "procedural", "timeline", "agnostic"]
categories = ["no-std", "multimedia", "graphics", "visualization"]
readme = "../../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# bevy
bevy_ecs = { workspace = true }
bevy_platform = { workspace = true }
bevy_math = { workspace = true }

# other
field_path = { workspace = true }
nonempty = { workspace = true }

[lints]
workspace = true
