[package]
name = "motiongfx"
description = "Backend agnostic motion graphics creation framework."
exclude = ["/examples/"]
keywords = ["motion", "animation", "procedural", "timeline", "agnostic"]
categories = ["no-std", "multimedia", "graphics", "visualization"]
readme = "./README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# bevy
bevy_math = { workspace = true }

# other
field_path = { workspace = true }
hashbrown = { workspace = true }
nonempty = { workspace = true }
typarena = { workspace = true }

[lints]
workspace = true

[features]
default = ["std"]
std = ["bevy_math/std"]
