[package]
name = "motiongfx_common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bevy = { workspace = true }
motiongfx_engine = { version = "0.1.0", path = "../motiongfx_engine" }

[lints]
workspace = true

[features]
default = ["bevy_sprite", "bevy_pbr"]
bevy_sprite = ["bevy/bevy_sprite"]
bevy_pbr = ["bevy/bevy_pbr"]
