[package]
name = "motiongfx_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bevy = { workspace = true }
smallvec = { workspace = true }
motiongfx_core_macros = { version = "0.1.0", path = "macros" }

[lints]
workspace = true

[features]
default = []
