[package]
name = "motiongfx_engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# bevy
bevy_ecs = { workspace = true }
bevy_app = { workspace = true }
bevy_platform = { workspace = true }
bevy_math = { workspace = true }
bevy_asset = { workspace = true, optional = true }
bevy_transform = { workspace = true, optional = true }
bevy_color = { workspace = true, optional = true }

# other
nonempty = { workspace = true }

[lints]
workspace = true

[features]
default = ["asset", "transform", "color"]
asset = ["dep:bevy_asset"]
transform = ["dep:bevy_transform"]
color = ["dep:bevy_color"]
