[package]
name = "motiongfx_kurbo"
description = "Kurbo geometry support for the MotionGfx framework."
keywords = ["motion", "animation", "procedural", "kurbo"]
categories = ["no-std", "multimedia", "graphics", "visualization"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# motiongfx
motiongfx = { workspace = true }

# kurbo
kurbo = { workspace = true }

[lints]
workspace = true

[features]
default = ["std"]
std = ["motiongfx/std", "kurbo/std"]
libm = ["kurbo/libm"]
