[package]
name = "bevy_examples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
publish = false

[dependencies]
bevy_motiongfx = { workspace = true, features = ["velyst"] }
bevy = { workspace = true, default-features = true, features = ["file_watcher"] }
bevy_vello = { workspace = true }

[lints]
workspace = true
