[package]
name = "bevy_examples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
publish = false

[dependencies]
bevy = { workspace = true, default-features = true, features = ["debug", "file_watcher"] }
bevy_motiongfx = { workspace = true, features = ["velyst"] }
motiongfx_editor = { workspace = true }

[lints]
workspace = true
