[package]
name = "bevy_examples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
publish = false

[dependencies]
bevy_motiongfx = { workspace = true }
motiongfx_editor_ui = { workspace = true }
bevy = { workspace = true, default-features = true, features = ["debug"] }

[lints]
workspace = true
